--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -51,9 +51,10 @@ h1 .sep { color: #666; padding: 0 .1em }
 #dirlist td.rev { text-align: right }
 #dirlist td.change { font-size: 85%; vertical-align: middle; white-space: nowrap }
 
-/* Style for the ''View Changes'' button */
+/* Style for the ''View Changes'' button and the diff preparation form */
 #anydiff { margin: 0 0 1em; float: left }
 #anydiff form, #anydiff div, #anydiff h2 { display: inline }
+#anydiff form th { text-align: right }
 #anydiff input {  vertical-align: baseline; margin: 0 -0.5em 0 1em }
 @media print {
  #anydiff form { display:  none }
