--- a/templates/diff_form.html
+++ b/templates/diff_form.html
@@ -6,7 +6,12 @@
       xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="layout.html" />
   <head>
-    <title>Generalized Diff Form</title>
+    <title>Prepare Diff</title>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#anydiff input[@name$='_path']").suggest();
+      });
+    </script>
   </head>
 
   <body>
@@ -14,39 +19,51 @@
 
     <div id="content" class="changeset">
       <div id="title">
-        <h1>Select Base and Target for Diff:</h1>
+        <h1>Prepare Diff</h1>
       </div>
 
       <div id="anydiff">
         <form action="${href.changeset()}" method="get">
-          <table>
-            <tr>
-              <th><label for="old_path">From:</label></th>
-              <td>
-                <input type="text" id="old_path" name="old_path" value="$old_path" size="44" />
-                <label>at Revision:
-                  <input type="text" name="old" value="$old_rev" size="4" />
-                </label>
-              </td>
-            </tr>
-            <tr>
-              <th><label for="new_path">To:</label></th>
-              <td>
-                <input type="text" id="new_path" name="new_path" value="$new_path" size="44" />
-                <label>at Revision:
-                  <input type="text" id="new_rev" name="new" value="$new_rev" size="4" />
-                </label>
-              </td>
-            </tr>
-          </table>
+          <fieldset>
+            <legend>Select the base and the target for the diff:</legend>
+            <table>
+              <tr>
+                <th><label for="old_path">From:</label></th>
+                <td>
+                  <input type="text" id="old_path" name="old_path"
+                         value="$old_path" size="44" />
+                  <label>at revision:
+                    <input type="text" name="old" value="$old_rev" size="4" />
+                  </label>
+                </td>
+              </tr>
+              <tr>
+                <th><label for="new_path">To:</label></th>
+                <td>
+                  <input type="text" id="new_path" name="new_path"
+                         value="$new_path" size="44" />
+                  <label>at revision:
+                    <input type="text" name="new" value="$new_rev" size="4" />
+                  </label>
+                </td>
+              </tr>
+            </table>
+            <p class="hint">
+              For either path, you can start typing the path and will be
+              presented a list of existing directories and files to select
+              from. Select an entry by clicking on it, or by using the
+              up/down cursor keys and hitting tab.
+            </p>
+          </fieldset>
           <div class="buttons">
             <input type="submit" value="View changes" />
           </div>
         </form>
       </div>
       <div id="help">
-        <strong>Note:</strong> See <a href="${href.wiki('TracChangeset')}#ExaminingDifferencesBetweenBranches">TracChangeset</a>
-        for help on using the arbitrary diff feature.
+        <strong>Note:</strong> See
+        <a href="${href.wiki('TracChangeset')}#ExaminingDifferencesBetweenBranches">TracChangeset</a>
+        for help on using the diff feature.
       </div>
     </div>
   </body>
