--- a/templates/browser.html
+++ b/templates/browser.html
@@ -104,7 +104,7 @@
         </tr>
       </table>
 
-      <div py:if="preview" id="preview" class="searchable">
+      <div py:if="file.preview" id="preview" class="searchable">
         ${preview_file(file.preview)}
       </div>
 
